fix tests for portability

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for App-migrate
 
 {{$NEXT}}
 	- Reformat doc.
+	- Fixed tests for portability.
 
 v0.2.3  2016-02-17 10:31:56 EET
 	- Improve test portability.
